2014-10-31  Holger Seelig  <holger.seelig@yahoo.de>

	* NodePropertiesEditor.xml:
	* MaterialEditorPreview.x3dv:
	* X3DNodePropertiesEditorInterface.h:
	* X3DNodePropertiesEditorInterface.cpp:
	* NodePropertiesEditor.cpp:
	* OutlineCellRenderer.cpp: 

2014-10-30  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp:
	* X3DGeometryPropertiesEditorInterface.h:
	* X3DGeometryPropertiesEditorInterface.cpp: 

2014-10-27  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* style.css:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* Funny.x3dv:
	* LostValley.x3dv:
	* X3DTextViewEditable.cpp: 

2014-10-26  Holger Seelig  <holger.seelig@yahoo.de>

	* alfa147.x3dv:
	* OutlineFields.h: 

2014-10-24  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeModel.h:
	* OutlineTreeModel.cpp:
	* X3DOutlineTreeView.cpp:
	* X3DTextViewEditable.h:
	* X3DTextViewEditable.cpp: 

2014-10-24  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineFields.h:
	* X3DPrimitiveCountEditor.cpp: 

2014-10-24  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* style.css:
	* X3DLightEditorInterface.cpp:
	* GeometryPropertiesEditor.xml:
	* X3DGeometryPropertiesEditorInterface.h:
	* X3DGeometryPropertiesEditorInterface.cpp:
	* X3DPrimitiveCountEditor.h:
	* GeometryPropertiesEditor.h:
	* X3DPrimitiveCountEditor.cpp:
	* GeometryPropertiesEditor.cpp: 

2014-10-22  Holger Seelig  <holger.seelig@yahoo.de>

	* top.x3dv:
	* pear.x3dv:
	* al.x3dv:
	* lamp.x3dv:
	* dart.x3dv:
	* teddy.x3dv:
	* apple.x3dv:
	* king.x3dv:
	* pawn.x3dv:
	* rook.x3dv:
	* gourd.x3dv:
	* cow.x3dv:
	* cannon.x3dv:
	* banana.x3dv:
	* queen.x3dv:
	* pig.x3dv:
	* knight.x3dv:
	* venus.x3dv:
	* 767.x3dv:
	* tie.x3dv:
	* x29.x3dv:
	* bishop.x3dv:
	* moon.x3dv:
	* legoDog.x3dv:
	* f16.x3dv:
	* bird.x3dv:
	* star.x3dv:
	* cylMan.x3dv:
	* heart.x3dv:
	* mushroom.x3dv:
	* mug.x3dv:
	* shell.x3dv: