@@ -1,5 +1,10 @@
 2014-10-31  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* IndexedFaceSet.h:
+	* IndexedFaceSet.cpp: 
+
+2014-10-31  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* ViewVolume.h:
 	* Shape.h:
 	* ViewVolume.cpp:
