@@ -1,5 +1,13 @@
 2014-10-31  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* GeometryPropertiesEditor.xml:
+	* X3DGeometryPropertiesEditorInterface.h:
+	* X3DGeometryPropertiesEditorInterface.cpp:
+	* GeometryPropertiesEditor.h:
+	* GeometryPropertiesEditor.cpp: 
+
+2014-10-31  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* NodePropertiesEditor.xml:
 	* MaterialEditorPreview.x3dv:
 	* X3DNodePropertiesEditorInterface.h:
